manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owncloud
  namespace: owncloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owncloud
  template:
    metadata:
      labels:
        app: owncloud
    spec:
      containers:
        - name: owncloud
          image: owncloud/server:10.6
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /status.php
              port: http
              httpHeaders:
              - name: Host
                value: owncloud.home.saltrelli.com
            timeoutSeconds: 5
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /status.php
              port: http
              httpHeaders:
              - name: Host
                value: owncloud.home.saltrelli.com
            timeoutSeconds: 3
            periodSeconds: 5
          volumeMounts:
          - name: owncloud-data
            mountPath: /mnt/data
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: owncloud-data
          persistentVolumeClaim:
            claimName: owncloud
