manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owncloud
  namespace: owncloud
  annotation:
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
spec:
  tls:
    - hosts:
        - owncloud.home.saltrelli.com
      secretName: owncloud-cert
  rules:
    - host: owncloud.home.saltrelli.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: owncloud
                port: 
                  number: 80
